<resources>
    <string name="app_name">BinBuddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="challenge_title">Challenge Title</string>
    <string name="brief_description_of_the_challenge">Brief description of the challenge.</string>
    <string name="challenge_image">Image referent to the challenge described</string>
    <string name="event_name">Event Name</string>
    <string name="add_tip">Add Tip</string>
    <string name="tips_community">Tips Community</string>
    <string name="hello_eco_buddy">Hello Eco-buddy!</string>
    <string name="recommendations">Recommendations</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="add_recommendations_for_community">Add Recommendations for Community</string>
    <string name="profile_image">Imagen del perfil de instagram</string>
    <string name="open_instagram">Botón que te lleva directamente al perfil de la cuenta de instagram seleccionada</string>
    <string name="reward_image_description">Image referent to reward\'s category</string>
</resources>