<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/image_challenge"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/challenge_image"
        android:scaleType="centerCrop"
        android:background="@color/green" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitleChallenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/challenge_title" />

        <TextView
            android:id="@+id/description_challenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:text="@string/brief_description_of_the_challenge" />

        <ProgressBar
            android:id="@+id/progress_challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="20"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal" />
    </LinearLayout>
</LinearLayout>
